# MailIntel-Email-Classification-App

./: .replit  README.md  Readme.md  Task_4.ipynb  app.py  birth_model.pkl  births.csv  births_prepared.csv  dashboard.py  data_fetcher.py  model_retraining.py  predictions.csv  pyproject.toml  replit.md  retraining_config.json  scheduler.py  train_model.py  unemployment.csv  utils.py
Backend/: .env.example  db.py  gmail.py  main.py  model.py  render.yaml  requirements.txt  token.pkl  utils.py
Backend/Models/: naive_bayes_model.joblib  svm_model.joblib  tokenizer.pkl  vectorizer.pkl
Models/: naive_bayes_model.joblib  svm_model.joblib  vectorizer.pkl
Notebook/: emails_classification.ipynb
